# haskell-extensions-mapping

./: CHANGELOG.md  ChangeLog.md  README.md  haskell-extensions-mapping.cabal  stack.yaml
.github/workflows/: build-ci.yml
src/Language/Haskell/Exts/Extension/: Mapping.hs
