name:                haskell-extensions-mapping
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/haskell-extensions-mapping#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2022 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Language.Haskell.Exts.Extension.Mapping
  build-depends:
      base >= 4.7 && < 5
    , haskell-src-exts >= 0.2.1
    , template-haskell >= 2.5.0.0

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/haskell-extensions-mapping
